# gdbus

./: CMakeLists.txt  README.md  run.py  run.sh
framework/: CMakeLists.txt  includeTest.c  includeTest.h
framework/include/: Hello.h
framework/interface/: Hello.xml  Test.xml
framework/src/: Hello.c
src/: client.cpp  server.cpp
